feat: refactore data dictionary